@@ -1,7 +1,7 @@
 AUX rkt-metadata.service 242 SHA256 4e853c216abb6c6ab732a7554aa192057b70bfa671323c98d1f58163c4b4478f SHA512 32e7eb44def072ef82a18e5d315d46d4f42b096d478f6373746be84d580e7a69df74f34f99d0fd22333135300b38a5cbf8ff6ce9319d6ebc5c4b790ef018538d WHIRLPOOL fb6cba52bb8f4a8240282775cdc0eb0af8a82c9fbdd6473d5c418265198d1ec1f7de9dbec5ee727f4477d043874669acce9796359df748d13313d8be56f57a79
 AUX rkt-metadata.socket 227 SHA256 618b37860305914df77fbb0312e7ff54d9fc0c1b5b682d4cd1163fc07ec5553d SHA512 fa9044246b99161ed5903047e7b2d9c3f55d944889f263a7646d86d76ebbaf3ec86f6cd4ae2dfc5aa92169b2ac96c9dc6dbbe62ffa4437e504c539dc2b7f1600 WHIRLPOOL 3eb8f97cfb96f99b803148caa23c6882b1db6911209079a54a5aa63be27ac70adc3842be46ddca232eb547789d8b14c488fe672b56f4c3f48ec0194914cffc69
-DIST rkt-0.5.4.tar.gz 3790446 SHA256 bd49cd54cd2b57130d43fe10b5f92c5b5923fbd4aa56078558fcd1a1636cf275 SHA512 2241ebca42ceddd2e077831495655c27d57e433b3953a31ece3116c58689da36bd1dbca1b2ac8ffc46c9f94e2240b62633fd8cbfa2b2a44c0d08a29a4710398e WHIRLPOOL 4d6ef61e5f7f491e4c63d2afc820a38879211c0b5759c27a04674a49b611a2b4d523c203f624be0299ecb087ef240563dad028297d80a35fa833e0d540adf5d6
-EBUILD rkt-0.5.4.ebuild 1373 SHA256 8632d21cebd3c2d22dbcfbfe8c1f0392a55cd21cd142bbed12d4219677089260 SHA512 0862881c25b87af294c015379bfcad143cdc108b20996feb471e1adbc19f441f665cb0154641b24e0d4197418c9b874a1bf8fb76868d8b9706f57a7e10a4aecd WHIRLPOOL 078a55637f91c5fa8b7471aabb95ae51b39a2507659b0082c9e2bb5f8e0c67132a845cafb6b6e1d12fab0ef1ded03a98732fa4972e60e215048a5d4cbc7cbaae
+DIST rkt-0.5.6.tar.gz 1186043 SHA256 bae39568c9e980245b13309ba89eac1f31ba8e29d7ccf3e0f85b75c34ae57a7d SHA512 cbd69991d880a5cddecfd4afdbc81c8508661cd5ba9880eff322314f1ab840676a2db36061b8624336fb15f8a270818bf799a28ae6b51982d3df71842845bdd3 WHIRLPOOL 1b8027bd28b78b8d26ff29ad286be76c37fb6a5c2da0f8b764d20960dd0f0f4ae7cf5798fe1c04549c9ad453cd3434f70a8f2ccc38192e1c5cce57da4a42af4f
+EBUILD rkt-0.5.6.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
 EBUILD rkt-9999.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
-MISC ChangeLog 637 SHA256 e5f48b207895167ae8dffe6ef4edf85274c6c0972ffdc047daa9dd6144bda1c8 SHA512 d7a6f0167ab060ff88b28330f2056b9906ad7adac118510ef1b2c617646875f54eb7579111deb2e4f8d17e3b3f570e154766f6826e618635621c72240dabc7b8 WHIRLPOOL 67b51531c216b66e7337ea75d445a22ad85ab1ef54acc48d81deed9934227076fad2781f50b228731746dba38a0a688647a5e119d5f9cc194be71030589e05d1
+MISC ChangeLog 796 SHA256 db94443baadf5d7f756bab2fdee6a572fa2f3e7f08070378446397d8aff56b65 SHA512 458135a9f05641c2110ff808094c76371401f435716895d0dfa1e33ee07177d5b804cbab35c7f4f6ef8367b9bd1d2b7ac748795cd7ae9aa5fb17b109a5be5b4a WHIRLPOOL f31d51f67b834989a4ad3d048b1462d36f2ffd5f27dde081a2dc06f5e0f005731f29184180770951089d66c94dab675bab88d501c491181a974bd5fed7a6b077
 MISC metadata.xml 596 SHA256 5f997e962d9c78f7582e9c904c36f869993e602de23d07c2ac5027de8506af2c SHA512 535822f8bf2b487331325c16eec2fc60a45fc002e45721741ffb1ab24d3117760693a5e63e535f2604aa6a084e7acbac115478b3230cde720f20eed712316fc9 WHIRLPOOL a5248eafc6fb6ff0fc9777315a51b9f4db2bf9de3d1aca50fd09c4fd83f48ddc0e2fd57fa60118263b80b1d6ab8e8283313e317d8755571a3505db4c61a14a80
