@@ -1,3 +1,9 @@
+*rkt-0.5.6 (30 May 2015)
+
+  30 May 2015; Stefan Junker <code@stefanjunker.de> +rkt-0.5.6.ebuild,
+  -rkt-0.5.4.ebuild:
+  app-emulation/rkt: version bump 0.5.6
+
   20 May 2015; Stefan Junker <code@stefanjunker.de> rkt-9999.ebuild:
   rkt: Cleanup ebuild
 
